<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FreeChat</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_refresh">Refresh</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_chat">ChatActivity</string>
    <string name="title_activity_fcaction_bar">FCActionBarActivity</string>
    <string name="send">send</string>
    <string name="pic">pic</string>
    <string name="audio">aud</string>
    <string name="title_activity_fcmain">FCMainActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    
    <string name="hint_username">your name</string>
    <string name="hint_passwd">your password</string>
    <string name="hint_passwd_confirm">confirm password</string>
    
    <string name="sign_up">Sign Up</string>

    <string name="hold_to_talk">hold to talk</string>
    <string name="release_to_send">release to send</string>
    <string name="text">txt</string>
</resources>
