<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.zhangwei.testlogin.FCRegisterActivity">


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/hint_username"
        android:id="@+id/et_newusername"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="61dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/hint_passwd"
        android:inputType="textPassword"
        android:id="@+id/et_newpassword"
        android:layout_below="@+id/et_newusername"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/hint_passwd_confirm"
        android:inputType="textPassword"
        android:id="@+id/et_checkpassword"
        android:layout_below="@+id/et_newpassword"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/bt_reg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="61dp"
        android:background="@drawable/fcbutton_style"
        android:text="@string/sign_up"
        android:textColor="@color/Clearwhite" />

    <EditText
        android:id="@+id/et_emailAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bt_reg"
        android:layout_alignLeft="@+id/et_checkpassword"
        android:layout_alignRight="@+id/et_checkpassword"
        android:layout_marginBottom="38dp"
        android:ems="10"
        android:hint="your email address" />

</RelativeLayout>
