<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.freechat.ui.activity.FCChatActivity" >

    <LinearLayout
        android:id="@+id/chat_bottom_linear"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/chat_title_layer"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <Button
            android:id="@+id/bt_send_picture"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:text="@string/pic"
            android:textColor="@color/Clearwhite" />
        
        <Button
            android:id="@+id/bt_send_audio"
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:text="@string/audio"
            android:textColor="@color/Clearwhite" />

        <EditText
            android:id="@+id/et_chatinfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="11"
            />

        <Button
            android:id="@+id/bt_send_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send"
            android:textColor="@color/Clearwhite" />

        <Button
	        android:id="@+id/recorder_button"
	        android:layout_width="wrap_content"
	        android:layout_height="48dp"
	        android:text="@string/hold_to_talk"
	        android:textSize="16sp"
	        android:layout_weight="3"
	        android:textColor="@color/Clearwhite"
	        android:background="@color/Skyblue"
	        android:visibility="gone" />

    </LinearLayout>

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lv_chat_list"
        android:divider="@null"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/chat_bottom_linear" />

    <include
        android:id="@+id/voice_record_popup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        layout="@layout/record_hint_window"
        android:visibility="gone" />

</RelativeLayout>
